...
            ("Squat", "strength"),
            ("Split Squat", "strength"),
            ("Deadlift", "strength"),
            ("Lat Pull Down", "strength"),
            ("Bent Over Row", "strength"),
            ("Leg Press", "strength"),
            ("MTB", "duration"),
            ("Elipitical", "duration"),
            ("Treadmill", "duration")
        ]

        for (index, item) in moves.enumerated() {
            let move = Move(context: context)
...
